tests/specs/infer_function_assignment.txt
# mod.ts
export function foo(n = 0, b: string = 0) {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(n = 0, b: string = 0) {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

function foo(n: number, b: string): void


# output.json
[
  {
    "kind": "function",
    "name": "foo",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [
        {
          "kind": "assign",
          "left": {
            "kind": "identifier",
            "name": "n",
            "optional": false,
            "tsType": {
              "repr": "number",
              "kind": "keyword",
              "keyword": "number"
            }
          },
          "right": "0",
          "tsType": null
        },
        {
          "kind": "assign",
          "left": {
            "kind": "identifier",
            "name": "b",
            "optional": false,
            "tsType": {
              "repr": "string",
              "kind": "keyword",
              "keyword": "string"
            }
          },
          "right": "0",
          "tsType": null
        }
      ],
      "returnType": {
        "repr": "void",
        "kind": "keyword",
        "keyword": "void"
      },
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
